<resources>
    <!-- Generic Strings -->
    <string name="app_name">GitJobs</string>
    <string name="menu">Menu</string>

    <!-- BottomNavigationView Strings -->
    <string name="action_search">Search Job</string>
    <string name="action_favourites">Favourites</string>
    <string name="action_settings">Settings</string>

    <!-- SearchFragment Strings -->
    <string name="description_hint">Description</string>
    <string name="location_hint">Location</string>
    <string name="full_time_switch">Full Time? \u0020</string>
    <string name="search_button">SEARCH JOB</string>

    <!-- SelectedJobOfferActivity Strings -->
    <string name="open_offer_on_github_button">OPEN ON GITHUB</string>
    <string name="open_company_website_button">OPEN COMPANY WEBSITE</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_on_map_button">Show the nearest offers</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="search_results">Search Results</string>
    <string name="company_logo_placeholder">Company Logo</string>
    <string name="switch_yes">Yes</string>
    <string name="switch_no">No</string>
    <string name="settings_image_placeholder">Settings Image</string>
    <string name="settings_privacy">Privacy</string>
    <string name="settings_internet">Internet</string>
    <string name="settings_brightness">Brightness</string>
    <string name="settings_location">Location</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_faq">FAQ</string>
</resources>
