<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/action_favourites"
        android:enabled="true"
        android:icon="@mipmap/icon_heartfilled_border_lay"
        android:title="@string/action_favourites"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"></item>
</menu>