<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".SearchFragment"
    android:background="?attr/colorBackground">

    <TextView
        android:id="@+id/textGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/app_name"
        android:textColor="#3F51B5"
        android:textSize="56sp"
        android:textStyle="bold" />

    <EditText
        android:textColor="?attr/colorText"
        android:textColorHint="?attr/colorText"
        android:textCursorDrawable="@null"
        android:id="@+id/descriptionEditTextID"
        android:background="@drawable/edittextbackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:padding="10dp"
        android:ems="10"
        android:hint="@string/description_hint"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="63dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/locationEditTextID"
        android:textColor="?attr/colorText"
        android:textColorHint="?attr/colorText"
        android:textCursorDrawable="@null"
        android:background="@drawable/edittextbackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:padding="10dp"
        android:ems="10"
        android:hint="@string/location_hint"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditTextID"
        tools:layout_editor_absoluteX="61dp"
        android:importantForAutofill="no" />

    <Switch
        android:id="@+id/fullTimeSwitchID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:padding="10dp"
        android:showText="true"
        android:text="@string/full_time_switch"
        android:textColor="?attr/colorHint"
        android:textOff="@string/switch_no"
        android:textOn="@string/switch_yes"
        android:thumb="@drawable/round_thumb"
        android:track="@drawable/round_track"
        app:layout_constraintTop_toBottomOf="@+id/locationEditTextID"
        tools:layout_editor_absoluteX="148dp" />


    <Button
        android:id="@+id/searchJobButtonID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="70dp"
        android:textColor="#ffffff"
        android:layout_gravity="end"
        android:background="@drawable/buttonshape"
        android:text="@string/search_button"
        app:layout_constraintTop_toBottomOf="@+id/fullTimeSwitchID"
        tools:layout_editor_absoluteX="147dp" />

    <Button
        android:id="@+id/showOnMapButtonID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="#ffffff"
        android:layout_gravity="center"
        android:background="@drawable/buttonshape"
        android:text="@string/show_on_map_button"
        app:layout_constraintTop_toBottomOf="@+id/fullTimeSwitchID"
        tools:layout_editor_absoluteX="147dp" />

</LinearLayout>